Add prescription's storage skeleton